Made main page nicer

--- a/index.html
+++ b/index.html
@@ -10,23 +10,21 @@
 <body>
     <header>
         <h1>
-            <a href="/">JavaScript Quiz</a>
+            <a class="QuizTitle" href="/">JavaScript Quiz</a>
         </h1>
         <nav>
             <li>
-                <a href="highscore.html">Personal High Scores</a>
+                <a class="highScore" href="highscore.html">Personal High Scores</a>
             </li>
         </nav>
     </header>
-    <section>
+    <section class="MainPrompt">
         <div>
             <h1>JavaScript Quiz</h1>
-            <p>
-                This is a JavaScript multiple choice quiz. You only have 60 seconds to answer all of the questions. For each question answered incorrectly, the time remaining decreases. When finished, enter your initials to save your score. You can keep track of your scores by pressing High Scores on the top of the page. The quiz will begin when you press the start button. Good luck!!
-            </p>
+            <p>This is a JavaScript multiple choice quiz. You only have 60 seconds to answer all of the questions. For each question answered incorrectly, the time remaining decreases. When finished, enter your initials to save your score. You can keep track of your scores by pressing High Scores on the top of the page. The quiz will begin when you press the start button. Good luck!!!</p>
         </div>
         <div>
-            <a class="btn btn-primary" href="quiz.html" role="button">Start Quiz</a>
+            <a id="startbutton" href="quiz.html">Start Quiz</a>
         </div>
     </section>
 
