created some functions, still need to fix up quiz and highscore html

--- a/quiz.html
+++ b/quiz.html
@@ -26,8 +26,16 @@
                 <p class="timerText">Seconds remaining <span id="timeLeft">60</span></p>
             </div>
         </div>
+        <div id="quizAnswers">
+            <button type="button" id="answerOne">answer</button>
+            <button type="button" id="answerTwo">answer</button>
+            <button type="button" id="answerThree">answer</button>
+            <button type="button" id="answerFour">answer</button>
+        </div>
     </section>
 
     <script src="./assets/js/quiz.js"></script>
 
 </body>
+
+</html>
