Added high score page related functions/variables, still need add score function

--- a/highscore.html
+++ b/highscore.html
@@ -23,8 +23,13 @@
         <ol id="HighScoreList">
 
         </ol>
-        <div class="highScore" onclick="">
+        <div id="clearButton" class="highScore" onclick="">
             Clear High Scores
         </div>
     </section>
+
+    <script src="assets/js/quiz.js"></script>
+
 </body>
+
+</html>
