made 2 separate js files for high scores and the quiz itself, FINALLY got listScores to work properly

--- a/highscore.html
+++ b/highscore.html
@@ -20,15 +20,15 @@
     </header>
     <section class="MainPrompt">
         <h1>Highest Scores</h1>
-        <ol id="HighScoreList">
+        <li id="HighScoreList">
 
-        </ol>
+        </li>
         <div id="clearButton" class="highScore" onclick="">
             Clear High Scores
         </div>
     </section>
 
-    <script src="assets/js/quiz.js"></script>
+    <script src="assets/js/scores.js"></script>
 
 </body>
 
