Got clear high scores function working, still need to clean up css for the rest

--- a/highscore.html
+++ b/highscore.html
@@ -23,7 +23,7 @@
         <li id="HighScoreList">
 
         </li>
-        <div id="clearButton" class="highScore" onclick="">
+        <div id="clear" class="highScore" onclick="clearHighScores()">
             Clear High Scores
         </div>
     </section>
