fixed functions that were still having issues, cleaned up css so that it is usable in any window size. Still need to add more comments and write readme

--- a/highscore.html
+++ b/highscore.html
@@ -14,16 +14,15 @@
         </h1>
         <nav>
             <li>
-                <a class="highScore" href="highscore.html">Personal High Scores</a>
+                <a class="highScoreNav" href="highscore.html">Personal High Scores</a>
             </li>
         </nav>
     </header>
     <section class="MainPrompt">
         <h1>Highest Scores</h1>
-        <li id="HighScoreList">
-
+        <li id="HighScoreList" class="highScoreList">
         </li>
-        <div id="clear" class="highScore" onclick="clearHighScores()">
+        <div id="clear" class="highScoreClear" onclick="clearHighScores()">
             Clear High Scores
         </div>
     </section>
