--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </h1>
         <nav>
             <li>
-                <a class="highScore" href="highscore.html">Personal High Scores</a>
+                <a class="highScoreNav" href="highscore.html">Personal High Scores</a>
             </li>
         </nav>
     </header>
@@ -27,8 +27,6 @@
             <a id="startbutton" href="quiz.html">Start Quiz</a>
         </div>
     </section>
-
-
 
 </body>
 
