--- a/quiz.html
+++ b/quiz.html
@@ -14,19 +14,19 @@
         </h1>
         <nav>
             <li>
-                <a class="highScore" href="highscore.html">Personal High Scores</a>
+                <a class="highScoreNav" href="highscore.html">Personal High Scores</a>
             </li>
         </nav>
     </header>
 
     <section>
         <div id="quesBox">
-            <h1 class="quesText" id="ques">bla bla bla bla bla bla bla bla bla bla bla bla</h1>
+            <h1 class="quesText" id="ques">Placeholder Text</h1>
             <div>
                 <p class="timerText">Seconds remaining <span id="timeLeft">60</span></p>
             </div>
         </div>
-        <div id="quizAnswers">
+        <div id="quizAnswers" class="quizBox">
             <button type="button" id="answerOne">answer</button>
             <button type="button" id="answerTwo">answer</button>
             <button type="button" id="answerThree">answer</button>
