Fixed css to make look prettier, added more comments. Still need a readme

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="MainPrompt">
         <div>
             <h1>JavaScript Quiz</h1>
-            <p>This is a JavaScript multiple choice quiz. You only have 60 seconds to answer all of the questions. For each question answered incorrectly, the time remaining decreases. When finished, enter your initials to save your score. You can keep track of your scores by pressing High Scores on the top of the page. The quiz will begin when you press the start button. Good luck!!!</p>
+            <p>This is a JavaScript multiple choice quiz. You will only have 60 seconds to answer all of the questions. For each question answered incorrectly, the time remaining will decrease. When finished, you may enter your initials to save your score. You can keep track of your previous scores by pressing "Personal High Scores" at the top of the page. The quiz will begin as soon as you press the "Start Quiz" button below. Good luck!</p>
         </div>
         <div>
             <a id="startbutton" href="quiz.html">Start Quiz</a>
