--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,7 @@
         <div id="quesBox">
             <h1 class="quesText" id="ques">Placeholder Text</h1>
             <div>
-                <p class="timerText">Seconds remaining <span id="timeLeft">60</span></p>
+                <p class="timerText">Seconds remaining: <span id="timeLeft">60</span></p>
             </div>
         </div>
         <div id="quizAnswers" class="quizBox">
