Fixed issue where user can click on empty space around buttons, fixed up some more css

--- a/highscore.html
+++ b/highscore.html
@@ -22,8 +22,11 @@
         <h1>Highest Scores</h1>
         <li id="HighScoreList" class="highScoreList">
         </li>
-        <div id="clear" class="highScoreClear" onclick="clearHighScores()">
+        <div class="highScoreClear" onclick="clearHighScores()">
             Clear High Scores
+        </div>
+        <div class="highScoreClear" onclick="takeHome()">
+            Back to start page
         </div>
     </section>
 
