Fixed header link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>
-            <a class="QuizTitle" href="/">JavaScript Quiz</a>
+            <a class="QuizTitle" href="https://sonnytedesco26.github.io/Javascript-Code-Quiz/">JavaScript Quiz</a>
         </h1>
         <nav>
             <li>
