Wrote up readme, made comments more specific in js files, modified certain text in html

--- a/highscore.html
+++ b/highscore.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <section class="MainPrompt">
-        <h1>Highest Scores</h1>
+        <h1>Highest Scores:</h1>
         <li id="HighScoreList" class="highScoreList">
         </li>
         <div class="highScoreClear" onclick="clearHighScores()">
